# people

./: .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint  .yamllint.yml  Bruce-Harrell-0604517f-60c1-4431-8435-22213004e3df.yml  CITATION.cff  Dockerfile  Pipfile  README  README.md  docker-compose.yml  lint_yaml.py  pyproject.toml  schema.md  settings.yml  setup.cfg  tasks.py  to_yaml.py  utils.py
.github/: CODEOWNERS
.opencode/: package-lock.json
csv/: ak_legislators.csv  al_legislators.csv  ar_legislators.csv  az_legislators.csv  ca_legislators.csv  co_legislators.csv  ct_legislators.csv  dc_legislators.csv  de_legislators.csv  fl_legislators.csv  ga_legislators.csv  hi_legislators.csv  ia_legislators.csv  id_legislators.csv  il_legislators.csv  in_legislators.csv  ks_legislators.csv  ky_legislators.csv  la_legislators.csv  ma_legislators.csv  md_legislators.csv  me_legislators.csv  mi_legislators.csv  mn_legislators.csv  mo_legislators.csv  ms_legislators.csv  mt_legislators.csv  nc_legislators.csv  nd_legislators.csv  ne_legislators.csv  nh_legislators.csv  nj_legislators.csv  nm_legislators.csv  nv_legislators.csv  ny_legislators.csv  oh_legislators.csv  ok_legislators.csv  or_legislators.csv  pa_legislators.csv  pr_legislators.csv  (+12 more)
data/: duplicates.md
scrape/: ak.py  common.py  fl.py  ga.py  hi.py  md.py  mi.py  mn.py  mo.py  mt.py  ne.py  ny.py  oh.py  ok.py  page.txt  scrape_ak.py  scrape_fl.py  scrape_md.py  scrape_mt.py  scrape_tools.py  sd.py  spatula.py  va.py
scripts/: airtables.py  archive_leg_to_csv.py  clean_sources.py  lint_yaml.py  (+24 more)
(+64872 files in other folders)
