[tool.poetry]
name = "ospeople"
version = "2.0"
description = ""
authors = ["James Turk <james@openstates.org>"]

[tool.poetry.dependencies]
python = "^3.9"
openstates = "^6.0.1"

[tool.poetry.dev-dependencies]
invoke = "^1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

