[tool.poetry]
name = "ospeople"
version = "2.0"
description = ""
authors = ["James Turk <dev@jamesturk.net>"]

[tool.poetry.dependencies]
python = "^3.9"
openstates = "^6.11"

[tool.poetry.dev-dependencies]
invoke = "^1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

